# simple-file-store

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  sailfish.toml
.github/workflows/: build-on-push.yml  release.yml
docs/: client-concurrency.md
screenshots/: Screenshot 0.avif  Screenshot 1.avif
src/: auth.rs  config.rs  errors.rs  files.rs  hello_world.rs  home.rs  index.rs  login.rs  main.rs  ping.rs  safe_path.rs  templates.rs  upload.rs
src/assets/: error.css  files.css  home.css  login.css  mod.rs  redirect.css  upload.js
src/html/: error.rs  mod.rs  redirect.rs
templates/: error.stpl  files.stpl  home.stpl  login.stpl  redirect.stpl
