[package]
name = "simple-file-store"
version = "0.3.1"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", default-features = false, features = ["typed-header"] }
form_urlencoded = "1"
futures = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["http2"] }
jsonwebtoken = {version = "10", default-features = false, features = ["aws_lc_rs"] }
mime_guess = "2"
rand = "0.9"
rustix = { version = "1", features = ["fs"] }
sailfish = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
size = "0.5"
time = { version = "0.3", features = ["macros", "formatting"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-service = "0.3"

[build-dependencies]
lightningcss = "1.0.0-alpha.68"
oxc = { version = "0.108", features = ["minifier", "codegen"] }
